--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "type": "git",
     "url": "https://dchao19@github.com/dchao19/KentScheduleServer.git"
   },
-   "dependencies": {
-        "express": "~4.0.0",
-        "mongoose": "~3.6.13",
-        "body-parser": "~1.0.1",
-        "moment": "~2.10.6"
-    },
+  "dependencies": {
+    "body-parser": "~1.0.1",
+    "express": "~4.0.0",
+    "ical": "^0.4.0",
+    "moment": "~2.10.6",
+    "mongoose": "~3.6.13",
+    "unirest": "^0.4.2"
+  },
   "keywords": [
     "kds",
     "schedules",
