--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
     "moment": "~2.10.6",
-    "mongoose": "~3.6.13",
+    "moment-timezone": "^0.5.0",
+    "mongoose": "3.6.20",
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
