Switched run command to use nodemon

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An API for the Kent Schedule Server widget that uses JavaScript instead of Java. Should work better and be more versatile. ",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
