--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An API for the Kent Schedule Server widget that uses JavaScript instead of Java. Should work better and be more versatile. ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -12,9 +13,11 @@
   },
   "dependencies": {
     "body-parser": "~1.0.1",
+    "chai": "^3.5.0",
     "express": "~4.0.0",
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
+    "mocha": "^3.0.2",
     "moment": "~2.10.6",
     "moment-timezone": "^0.5.0",
     "mongoose": "3.6.20",
