--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "initial-config": "cd initial-configuration && node start_upload.js"
   },
   "repository": {
     "type": "git",
     "url": "https://dchao19@github.com/dchao19/KentScheduleServer.git"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "~1.0.1",
     "chai": "^3.5.0",
     "express": "~4.0.0",
