--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "mocha",
-    "initial-config": "cd initial-configuration && node start_upload.js"
+    "initial-config": "cd initial-configuration && node start_upload.js",
     "update-docs": "apidoc -i routes -o docs"
   },
   "repository": {
