--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mocha": "^3.0.2",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
-    "mongoose": "3.6.20",
+    "mongoose": "^4.6.8",
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
