--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "async": "^2.0.1",
     "body-parser": "~1.0.1",
     "chai": "^3.5.0",
-    "express": "~4.0.0",
+    "express": "~4.14.0",
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.6.8",
+    "node-schedule": "^1.2.0",
     "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
