--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "~1.0.1",
     "chai": "^3.5.0",
     "express": "~4.14.0",
+    "hawk": "^6.0.1",
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
     "mkdirp": "^0.5.1",
