--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "body-parser": "~1.0.1",
     "chai": "^3.5.0",
     "express": "~4.14.0",
+    "fs-extra": "^3.0.1",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "hawk": "^6.0.1",
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
