--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "async": "^2.0.1",
     "body-parser": "~1.0.1",
     "chai": "^3.5.0",
-    "express": "~4.14.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "express": "^4.14.1",
+    "express-session": "^1.15.3",
     "fs-extra": "^3.0.1",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^19.0.0",
     "hawk": "^6.0.1",
     "ical": "^0.4.0",
     "jsonwebtoken": "^5.5.4",
@@ -29,11 +30,10 @@
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.6.8",
-    "node-schedule": "^1.2.0",
-    "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
+    "pug": "^2.0.0-rc.2",
     "unirest": "^0.4.2"
   },
   "keywords": [
