--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.14.1",
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.6.8",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
